--- a/frontend/pages/add_edit.html
+++ b/frontend/pages/add_edit.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="./../CSS/add_edit.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="./../Script/header.js"></script>
+    <script src="./../Script/add_edit.js"></script>
+    
+    <script src="./../Script/footer.js"></script>
     <title>Add/Edit Book</title>
 </head>
 <body>
@@ -34,7 +38,7 @@
     <main class="all">
         <div class="inside">
             <div class="back-btn">
-                <a href="./admin_dashboard.html"><i class="fa fa-angle-left" aria-hidden="true"></i> Back</a>
+                <button id="back"><i class="fa fa-angle-left" aria-hidden="true"></i> Back</button>
             </div>
             <div class="book-details">
                 <div class="img-holder">
