--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../CSS/footer.css">
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/books.css">
+    <link rel="stylesheet" href="../CSS/modal.css">
+     
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -364,5 +366,20 @@
         <p>&copy; 2025 Online Library. All rights reserved.</p>
     </div>
 </footer>
+<div id="book-modal" class="modal hidden">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <img id="modal-image" src="" alt="Book cover" />
+        <h2 id="modal-title"></h2>
+        <p id="modal-author"></p>
+        <p id="modal-description"></p>
+        <p><strong>Year:</strong> <span id="modal-year"></span></p>
+        <p><strong>Status:</strong> <span id="modal-status"></span></p>
+        <p><strong>Genre:</strong> <span id="modal-genre"></span></p>
+        <p><strong>Language:</strong> <span id="modal-language"></span></p>
+        <p><strong>Pages:</strong> <span id="modal-pages"></span></p>
+    </div>
+</div>
+<script src= "../Script/modal.js" > </script>
 </body>
 </html>
