--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -47,8 +47,8 @@
                     <img src="./../CSS/assets/enceladus.jpg" alt="Book Cover" class="book-cover">
                 </div>
                 <div class="info">
-                    <label for="confirmation" class="book-title">Child of The Kindred</label>
-                    <label for="confirmation" class="author">By M. T. Magee</label>
+                    <label for="confirmation" class="book-title"></label>
+                    <label for="confirmation" class="author"></label>
                 </div>
             </div>
             <div class="confirm-btns">
