--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -173,6 +173,9 @@
             <p>&copy; 2025 Online Library. All rights reserved.</p>
         </div>
     </footer>
+        <button class="scroll-top">
+            <i class="fas fa-arrow-up"></i>
+        </button>
 </body>
 
 </html>
