edit the close button from index

--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
 
     <!-- Mobile Menu Side Panel -->
     <div class="mobile-menu">
-      <button class="close-menu">
-        <i class="fas fa-times"></i>
-      </button>
       <ul class="mobile-nav">
         <li><a href="#hero" class="active"><i class="fas fa-home"></i>
             Home</a></li>
@@ -203,7 +200,7 @@
     </footer>
 
     <!-- JavaScript Files -->
-    <!-- <script src="./frontend/Script/await.js" defer></script> -->
+    <!-- <script src="./frontend/Script/await.js"></script> -->
     <script src="./frontend/Script/header.js"></script>
     <script src="./frontend/Script/footer.js"></script>
   </body>
